@@ -1,5 +1,0 @@
-/* -*- C++ -*- */
-// $Id$
-
-// This is all we need to do to build ACE on a 64-bit Windows platform!
-#include "config-win32.h"
