@@ -1,3 +1,9 @@
+Sat Jul 30 13:11:43 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-windows.h:
+        * ace/config-win64.h:
+          Renamed win64.h to windows.h
+
 Sun Jul 24 04:27:10 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * examples/APG/Streams/Answerer.cpp:
